--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "save-dev": "^0.0.1-security"
   },
   "devDependencies": {
+    "dotenv": "^16.0.0",
+    "ejs": "^3.1.6",
     "env": "^0.0.2",
     "express": "^4.17.2",
-    "express-handlebars": "^6.0.2",
-    "handlebars": "^4.7.7"
+    "express-ejs-layouts": "^2.5.1",
+    "mongoose": "^6.1.6"
   }
 }
