--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "env": "^0.0.2",
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
+    "mongodb": "^4.2.2",
     "mongoose": "^6.1.6"
   }
 }
