--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
+    "express-validator": "^6.14.0",
     "nodemon": "^2.0.15",
     "save-dev": "^0.0.1-security"
   },
